--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -38,14 +38,13 @@
 
                 <button mat-menu-item>
                     <mat-icon>account_circle</mat-icon>
-                    <a style="text-decoration:none;color: rgba(0, 0, 0, 0.87);" href = "/pages/profile">
-                    <span>My Profile</span></a>
+                    <!-- <a style="text-decoration:none;color: rgba(0, 0, 0, 0.87);" href = "/pages/profile"></a> -->
+                    <span>My Profile</span>
                 </button>
 
                 <button mat-menu-item class="">
                     <mat-icon>mail</mat-icon>
-                    <a style="text-decoration:none;color: rgba(0, 0, 0, 0.87);" href = "/apps/mail">
-                        <span>Inbox</span></a>
+                        <span>Inbox</span>
                 </button>
 
                 <button mat-menu-item class="">
@@ -61,14 +60,14 @@
 
             <div class="toolbar-separator"></div>
 
-            <button mat-button fxHide fxShow.gt-xs
+            <!-- <button mat-button fxHide fxShow.gt-xs
                     class="language-button"
                     [matMenuTriggerFor]="languageMenu">
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <img class="flag mr-8" [src]="'assets/icons/flags/'+selectedLanguage.flag+'.png'">
                     <span class="iso text-uppercase">{{selectedLanguage.id}}</span>
                 </div>
-            </button>
+            </button> -->
 
             <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
 
